--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rishi Gurjar</title>
 </head>
 <body>
-    <h1>Rishi Gurjar</h1>
-    <p>Hi, this is my personal website -r</p>
+
     <marquee behavior="" direction="">Rishi Gurjar</marquee>
 </body>
 </html>
