--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rishi Gurjar</title>
 </head>
+<style>
+  .p1 {
+    font-family: "Helvetica"
+  }
+  h1 {
+    font-family: "Aktiv Grotesk";
+    font-size: 30px;
+    font-weight: 300;
+  }
+  marquee{
+    font-family: "Helvetica";
+  }
+  </style>
 <body>
 
     <marquee behavior="" direction="">Rishi Gurjar</marquee>
+    <h1> Rishi Gurjar</h1>
+<p class="p1">Rishi Gurjar</p>
+    
 </body>
 </html>
