--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
 </head>
 <style>
   .p1 {
-    font-family: "Helvetica"
+    font-family: "Helvetica";
+    font-weight: 300;
   }
   h1 {
-    font-family: "Aktiv Grotesk";
+    font-family: "Helvetica";
     font-size: 30px;
     font-weight: 300;
   }
   marquee{
     font-family: "Helvetica";
+    font-weight: 300;
+  }
+  a {
+    font-family: "Helvetica";
+    font-weight: 300;
+  }
+  b {
+    font-family: "Helvetica";
+    font-weight: 300;
   }
   </style>
 <body>
@@ -24,6 +34,16 @@
     <marquee behavior="" direction="">Rishi Gurjar</marquee>
     <h1> Rishi Gurjar</h1>
 <p class="p1">Rishi Gurjar</p>
-    
+  
+<p>
+  <a href="https://beyondterra.org">Beyond Terra</a> 
+  </p>
+<p>
+  <a href="https://www.sierraclub.org/san-francisco-bay">The Sierra Club </a>
+  </p>
+
+  <b <p>
+Contact Info: "rishigurjar2000" at "gmail.com"</p>
+
 </body>
 </html>
