--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <marquee behavior="" direction="">Rishi Gurjar</marquee>
     <h1> Rishi Gurjar</h1>
-<p class="p1">Rishi Gurjar</p>
+<p class="p1">SF Bay Area, California</p>
   
 <p>
   <a href="https://beyondterra.org">Beyond Terra</a> 
