--- a/index.html
+++ b/index.html
@@ -30,20 +30,17 @@
   }
   </style>
 <body>
-
+  <center> 
     <marquee behavior="" direction="">Rishi Gurjar</marquee>
     <h1> Rishi Gurjar</h1>
 <p class="p1">SF Bay Area, California</p>
-  
+
 <p>
   <a href="https://beyondterra.org">Beyond Terra</a> 
-  </p>
-<p>
-  <a href="https://www.sierraclub.org/san-francisco-bay">The Sierra Club </a>
   </p>
 
   <b <p>
 Contact Info: "rishigurjar2000" at "gmail.com"</p>
-
+</center> 
 </body>
 </html>
