--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </p>
 
   <b <p>
-Contact Info: "rishigurjar2000" at "gmail.com"</p>
+Contact Info: "rishigurjar2000" [at] "gmail" [dot] "com"</p>
 </center> 
 </body>
 </html>
