--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
   <b <p>
 Contact Info: "rishigurjar2000" [at] "gmail" [dot] "com"</p>
 </center> 
+
+<img src="Desktop/bbb1.jpg" alt="image">
+
 </body>
 </html>
