--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
 
   <b <p>
 Contact Info: "rishigurjar2000" [at] "gmail" [dot] "com"</p>
-<p>
-    A few photos:
-</p>
 </center> 
 
 <style>
@@ -106,6 +103,7 @@ Contact Info: "rishigurjar2000" [at] "gmail" [dot] "com"</p>
     
     <!-- Header -->
     <div class="header" id="myHeader">
+      <p>Some of my photos:</p>
       <p>Click on the buttons to change the grid view.</p>
       <button class="btn" onclick="one()">1</button>
       <button class="btn active" onclick="two()">2</button>
@@ -115,7 +113,7 @@ Contact Info: "rishigurjar2000" [at] "gmail" [dot] "com"</p>
     <!-- Photo Grid -->
     <div class="row"> 
       <div class="column">
-        <img src="webpage/D7706081-4315-40CE-BB68-A33729B6C10B_1_100_o.JPG" style="width:100%">
+        <img src="picsfolder/D7706081-4315-40CE-BB68-A33729B6C10B_1_100_o.JPG" style="width:100%">
         <img src="webpage/2B96CB5F-A2F2-4443-8C61-56958C00B187.jpg" style="width:100%">
     
       </div>
