--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@ Contact Info: "rishigurjar2000" [at] "gmail" [dot] "com"</p>
       <div class="column">
         <img src="picsfolder/D7706081-4315-40CE-BB68-A33729B6C10B_1_100_o.jpg" style="width:100%">
         <img src="picsfolder/2B96CB5F-A2F2-4443-8C61-56958C00B187.jpg" style="width:100%">
+        <img src="picsfolder/picsfolder/21C79643-EEE5-4C6E-BE3B-FCB850B31D32_1_201_a.jpg" style="width:100%">
     
       </div>
       <div class="column">
         <img src="picsfolder/404A8833-939E-4C37-8451-A7F1D0AA90EE.jpg" style="width:100%">
         <img src="picsfolder/28C1F2D5-F927-468B-BCD1-0305370016A4_1_201_a.jpg" style="width:100%">
+        <img src="picsfolder/picsfolder/D2844CCD-4AC0-4CEB-B366-F45AE3EE39C7_1_201_a.jpg" style="width:100%">
       </div>  
       <div class="column">
         <img src="picsfolder/539ED62F-DB6C-44FE-A185-7C1B7AE426AD_1_201_a.jpg" style="width:100%">
