profile and favicon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
+  <link rel="favicon" href="webpage/picsfolder/favicon.png"/>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,9 +32,11 @@
     font-weight: 300;
   }
   </style>
+
 <body>
   <center> 
     <marquee behavior="" direction="">Rishi Gurjar</marquee>
+    <img src="picsfolder/profilepic.png" alt="Profile Pic" width="150" height="150">
     <h1> Rishi Gurjar</h1>
 <p class="p1">SF Bay Area, California</p>
 
