--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <center> 
     <marquee behavior="" direction="">Rishi Gurjar</marquee>
-    <img src="picsfolder/profilepic.png" alt="Profile Pic" width="150" height="150">
+    <img src="picsfolder/favicon.png" alt="Profile Pic" width="150" height="150">
     <h1> Rishi Gurjar</h1>
 <p class="p1">SF Bay Area, California</p>
 
