--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rishi Gurjar</title>
-    <link rel="favicon" type="image/x-icon" href="picsfolder/favicon.png"/>
+    <link rel="favicon" type="image/x-icon" href="picsfolder/faviconico.ico"/>
 </head>
 <style>
   .p1 {
