--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 Contact Info: "rishigurjar2000" [at] "gmail" [dot] "com"</p>
 
 <p>
-  I like taking photos, changing climate policy, coding, eating food, restoring habitats, biking, gardening, and sleeping.</p>
+  I occasionally take photos and garden. </p>
 </center> 
 
 <style>
