--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 <p><span id="datetime"></span></p><script>var dt = new Date();
   document.getElementById("datetime").innerHTML=dt.toLocaleString();</script>  
 
-  <p>
-Contact Info: "rishigurjar2000" [at] "gmail" [dot] "com"</p>
+  <p> Contact Info:
+    <a href="mailto:rishigurjar2000@gmail.com">rishigurjar2000@gmail.com</a>
+     </p>
 
 <p>
   I occasionally take photos and garden. </p>
