--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     font-family: "Helvetica";
     font-size: 20px;
     font-weight: 300;
+    color: black
   }
   b {
     font-family: "Helvetica";
