--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   a {
     font-family: "Helvetica";
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 400;
     color: black
   }
   b {
@@ -46,7 +46,7 @@
   body {
     background-color: #eeeefe
   }
- 
+  
   </style>
 
 <body>
@@ -64,7 +64,7 @@
      </p>
 
 <p>
-  I occasionally take photos and garden. </p>
+  I occasionally take photos and <a href="garden.html"> garden</a> </p>
 </center> 
 
 <style>
