--- a/garden.html
+++ b/garden.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <p>
+        i garden.
+    </p>
+</head>
+<style>
+    body {
+    background-color: #eeeefe
+  }
+    p {
+    font-family: "Helvetica";
+    font-size: 20px;
+    font-weight: 400;
+    margin-left: 20em;
+    margin-right: 20em;
+  }
+</style>
+<body>
+    
+</body>
+</html>
