--- a/garden.html
+++ b/garden.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <p>
-        i garden.
+        i garden
     </p>
 </head>
 <style>
     body {
-    background-color: #eeeefe
+    background-color: white
   }
     p {
     font-family: "Helvetica";
@@ -20,6 +20,7 @@
     font-weight: 400;
     margin-left: 20em;
     margin-right: 20em;
+    color: red
   }
 </style>
 <body>
