--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
     <title>Rishi Gurjar</title>
     <link rel="icon" type="image/png" href="picsfolder/favicon.png">
+    <link rel="stylesheet" href="icons.css">
 </head>
 <style>
   @font-face {
@@ -26,40 +27,49 @@
     font-weight: 400;
     margin-left: 20em;
     margin-right: 20em;
+    color: red
   }
   h1 {
     font-family: "Helvetica";
     font-size: 40px;
     font-weight: 400;
+    color: red
   }
   a {
     font-family: "Helvetica";
     font-size: 15px;
     font-weight: 400;
-    color: black
+    color: red
   }
   b {
     font-family: "Helvetica";
     font-size: 20px;
     font-weight: 300;
+    color: red
   }
   h2 {
     font-family: "Helvetica";
     font-size: 20px;
     font-weight: 400;
+    color: red
   }
   body {
-    background-image: linear-gradient(to right, #ffbfbf ,#eeeefe);
+    background-color: white
   }
-
+  marquee {
+    font-size: 50px;
+    color: red;
+    font-family: Helvetica;
+  }
 </style>
+
 <!-- -- #eeeefe -->
 <body>
   <center> 
     <svg height="350" width="100%" background="black">
-      <circle cx="50%" cy="170" r="150" fill="black" alpha="50%"></circle>
+      <circle cx="50%" cy="170" r="150" fill="red" alpha="50%"></circle>
       </svg>
-    <h1> Rishi Gurjar</h1>
+    <h1> Rishi Gurjar </h1> 
 <h2 class="p1">SF Bay Area, California</h2>
 <h2><span id="datetime"></span></h2><script>var dt = new Date();
   document.getElementById("datetime").innerHTML=dt.toLocaleString();</script>  
@@ -71,6 +81,7 @@
 <p>
   I occasionally take <a href="photos.html"> photos</a> and <a href="garden.html"> garden</a> </p>
 </center> 
+
   </body>
   
 </html>
