--- a/photos.html
+++ b/photos.html
@@ -22,25 +22,28 @@
       font-weight: 400;
       margin-left: 20em;
       margin-right: 20em;
+      color: red
     }
     h1 {
       font-family: "Helvetica";
       font-size: 50px;
       font-weight: 400;
+      color: red
     }
     a {
       font-family: "Helvetica";
       font-size: 20px;
       font-weight: 400;
-      color: black
+      color: red
     }
     b {
       font-family: "Helvetica";
       font-size: 20px;
       font-weight: 300;
+      color: red
     }
     body {
-      background-color: #eeeefe
+      background-color: white
     }
     
     </style>
