red -> black circle

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <center> 
     <svg height="350" width="100%" background="black">
-      <circle cx="50%" cy="170" r="150" fill="red" alpha="50%"></circle>
+      <circle cx="50%" cy="170" r="150" fill="black" alpha="50%"></circle>
       </svg>
     <h1> Rishi Gurjar </h1> 
 <h2 class="p1">SF Bay Area, California</h2>
