center and css cleanup

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,62 +9,10 @@
     <title>Rishi Gurjar</title>
     <link rel="icon" type="image/png" href="picsfolder/favicon.png">
     <link rel="stylesheet" href="icons.css">
+    <link rel="stylesheet" href="text.css">
 </head>
-<style>
-  @font-face {
-  font-family: ScoutB;
-  src: url(fonts/scout-font/Scout-Bold.ttf);
-  }
-  @font-face {
-  font-family: ScoutR;
-  src: url(fonts/scout-font/Scout-Regular.ttf);
-  }
-  
-  p {
-    font-family: "Helvetica";
-    font-size: 15px;
-    font-weight: 400;
-    margin-left: 20em;
-    margin-right: 20em;
-    color: red
-  }
-  h1 {
-    font-family: "Helvetica";
-    font-size: 40px;
-    font-weight: 400;
-    color: red
-  }
-  a {
-    font-family: "Helvetica";
-    font-size: 15px;
-    font-weight: 400;
-    color: red
-  }
-  b {
-    font-family: "Helvetica";
-    font-size: 20px;
-    font-weight: 300;
-    color: red
-  }
-  h2 {
-    font-family: "Helvetica";
-    font-size: 20px;
-    font-weight: 400;
-    color: red
-  }
-  body {
-    background-color: white
-  }
-  marquee {
-    font-size: 50px;
-    color: red;
-    font-family: Helvetica;
-  }
-</style>
 
-<!-- -- #eeeefe -->
 <body>
-  <center> 
     <svg height="350" width="100%" background="black">
       <circle cx="50%" cy="170" r="150" fill="black" alpha="50%"></circle>
       </svg>
@@ -80,7 +27,6 @@
 
 <p>
   I occasionally take <a href="photos.html"> photos</a> and <a href="garden.html"> garden</a> </p>
-</center> 
 
   </body>
   
