--- a/photos.html
+++ b/photos.html
@@ -5,48 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="text.css">
 </head>
-<style>
-    @font-face {
-    font-family: ScoutB;
-    src: url(fonts/scout-font/Scout-Bold.ttf);
-    }
-    @font-face {
-    font-family: ScoutR;
-    src: url(fonts/scout-font/Scout-Regular.ttf);
-    }
-    
-    p {
-      font-family: "Helvetica";
-      font-size: 20px;
-      font-weight: 400;
-      margin-left: 20em;
-      margin-right: 20em;
-      color: red
-    }
-    h1 {
-      font-family: "Helvetica";
-      font-size: 50px;
-      font-weight: 400;
-      color: red
-    }
-    a {
-      font-family: "Helvetica";
-      font-size: 20px;
-      font-weight: 400;
-      color: red
-    }
-    b {
-      font-family: "Helvetica";
-      font-size: 20px;
-      font-weight: 300;
-      color: red
-    }
-    body {
-      background-color: white
-    }
-    
-    </style>
+
 <style>
     * {
       box-sizing: border-box;
