--- a/garden.html
+++ b/garden.html
@@ -6,22 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="text.css">
     <p>
         i garden
     </p>
 </head>
-<style>
-    body {
-    background-color: white
-  }
-    p {
-    font-family: "Helvetica";
-    font-size: 20px;
-    font-weight: 400;
-    margin-left: 20em;
-    margin-right: 20em;
-    color: red
-  }
+
 </style>
 <body>
     
