--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="picsfolder/favicon.png">
     <link rel="stylesheet" href="icons.css">
     <link rel="stylesheet" href="text.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,6 +29,35 @@
 <p>
   I occasionally take <a href="photos.html"> photos</a> and <a href="garden.html"> garden</a> </p>
 
+
+  <div class = "eyes">
+    <div class = "eye">
+      <div class="ball"></div>
+    </div>
+
+    <div class = "eye">
+      <div class="ball"></div>
+    </div>
+  </div>
+
+  <script>
+    var balls = document.getElementsByClassName("ball");
+    document.onmousemove = function() {
+      var x = event.clientX * 100 / window.innerWidth + "%";
+      var y = event.clientY * 100 / window.innerHeight + "%";
+      // event.clientX => get the horizontal coordinates of the mouse
+      // event.clientY => get the vertical coordinates of the mouse
+      // window.innerWidth => get the browser width 
+      // window.innerHeight => get the browser height
+
+      for(var i=0; i<2;i++) {
+        balls[i].style.left = x;
+        balls[i].style.top = y;
+        balls[i].style.transform = "translate(-"+x+",-"+y+")";
+      } 
+    }
+  </script>
+
   </body>
-  
+
 </html>
