--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="icon" type="image/png" href="picsfolder/favicon.png">
     <link rel="stylesheet" href="icons.css">
     <link rel="stylesheet" href="text.css">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> --> 
 </head>
 
 <body>
+  <marquee>--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</marquee>
+
+
     <svg height="350" width="100%" background="black">
       <circle cx="50%" cy="170" r="150" fill="black" alpha="50%"></circle>
       </svg>
