--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="picsfolder/favicon.png">
     <link rel="stylesheet" href="icons.css">
     <link rel="stylesheet" href="text.css">
+    <link rel="stylesheet" href="footer.php">
     <!-- <link rel="stylesheet" href="style.css"> --> 
 </head>
 
