--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 </head>
 
 <body>
-  <marquee>🏃                    🏃‍♂️                    🏃‍♀️</marquee>
-
-
     <svg height="350" width="100%" background="black">
       <circle cx="50%" cy="170" r="150" fill="black" alpha="50%"></circle>
       </svg>
@@ -31,7 +28,7 @@
      </p>
 
 <p>
-  I occasionally take <a href="photos.html"> photos,</a> <a href="collages.html"> illustrate,</a> </a>and <a href="garden.html"> garden</a> </p>
+  I occasionally take <a href="photos.html"> photos.</p>
 
   </body>
 
