--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      </p>
 
 <p>
-  I occasionally take <a href="photos.html"> photos.</p>
+  I occasionally take <a href="photodirectory.html">photos</a>.</p>
 
   </body>
 
