--- a/photodirectory.html
+++ b/photodirectory.html
@@ -30,7 +30,7 @@
 </style>
 <body>
     <h1>Some photos from</h1>
-    <h1><a href="usa.html">United States</a></h1>
+    <h1><a href="sf1.html">United States</a></h1>
     <h1><a href="uk.html">United Kingdom</a></h1>
     <h1><a href="spain.html">Spain</a></h1>
     <h1><a href="switzerland.html">Switzerland</a></h1>
