--- a/sf1.html
+++ b/sf1.html
@@ -13,6 +13,20 @@
         <link rel="stylesheet" type="text/css" href="assets/css/main.css">
         <link rel="stylesheet" type="text/css" media="screen" title="Custom Settings" href="assets/css/custom.css" >
         <script src="assets/js/libs/modernizr.custom.23122.js"></script>
+        <style>
+            @font-face {
+      font-family: Graphik;
+      src: url(fonts/Graphik-Regular.ttf);
+      }
+      p {
+        font-family: "Graphik";
+      font-size: 40px;
+      font-weight: 400;
+      color: red;
+      min-width: 200px;
+      text-align: center
+      }
+        </style>
     </head>
     <body class="has-header row-spacing-md" data-pagination-style="scroll" data-target-row-height="200">
                         <header class="">
