--- a/photodirectory.html
+++ b/photodirectory.html
@@ -30,11 +30,18 @@
 </style>
 <body>
     <h1>Some photos from</h1>
-    <h1><a href="sf1.html">United States</a></h1>
-    <h1><a href="uk.html">United Kingdom</a></h1>
-    <h1><a href="spain.html">Spain</a></h1>
-    <h1><a href="switzerland.html">Switzerland</a></h1>
+    <h1><a href="sf1.html">San Francisco</a></h1>
+    <h1>London</h1>
+    <h1>Madrid</h1>
+    <h1>Barcelona</h1>
+    <h1>Lauterbrunnen</h1>
 
+    <!--
+    <h1><a href="uk.html">London</a></h1>
+    <h1><a href="uk.html">Madrid</a></h1>
+    <h1><a href="uk.html">Barcelona</a></h1>
+    <h1><a href="uk.html">Lauterbrunnen</a></h1>
+ -->
 <p><i>Photos are still being added</i></p>
 </body>
 </html>
