--- a/photodirectory.html
+++ b/photodirectory.html
@@ -30,7 +30,7 @@
 </style>
 <body>
     <h1>Some photos from</h1>
-    <h1><a href="sf1.html">San Francisco</a></h1>
+    <h1><a href="sf.html">San Francisco</a></h1>
     <h1>London</h1>
     <h1>Madrid</h1>
     <h1>Barcelona</h1>
@@ -43,5 +43,6 @@
     <h1><a href="uk.html">Lauterbrunnen</a></h1>
  -->
 <p><i>Photos are still being added</i></p>
+<p>Taken on X-T4 - XF16-80mmF4 R OIS WR</p>
 </body>
 </html>
