--- a/photodirectory.html
+++ b/photodirectory.html
@@ -42,6 +42,7 @@
     <h1><a href="uk.html">Barcelona</a></h1>
     <h1><a href="uk.html">Lauterbrunnen</a></h1>
  -->
+ <!-- test-->
 <p><i>Photos are still being added</i></p>
 <p>Taken on X-T4 - XF16-80mmF4 R OIS WR</p>
 </body>
