--- a/london.html
+++ b/london.html
@@ -32,7 +32,7 @@
                         <header class="">
             <div class="background"></div>
             <div class="meta-left">
-                <p id="galleryTitle" class="title"><a href="photodirectory.html">Back</a> | San Francisco 2021, Fujifilm X-T4</p>
+                <p id="galleryTitle" class="title"><a href="photodirectory.html">Back</a> | London 2017, iPad Pro 2nd Gen + Film Presetting</p>
                                 <p id="galleryAuthor" class="author"></p>
                                 </p>
             </div>
@@ -129,26 +129,16 @@
         </div>
         <script type="text/javascript">
             var LR = LR || {};
-            LR.images = [                                                                                        {"id": "6244", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0542", "title": "", "caption" : ""},
-                         {"id": "6251", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0549", "title": "", "caption" : ""},
-                         {"id": "6252", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0551", "title": "", "caption" : ""},
-                         {"id": "6257", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0557", "title": "", "caption" : ""},
-                         {"id": "6258", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0558", "title": "", "caption" : ""},
-                         {"id": "6259", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0559", "title": "", "caption" : ""},
-                         {"id": "6260", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0560", "title": "", "caption" : ""},
-                         {"id": "6261", "largeWidth": "1200", "largeHeight": "737", "exportFilename": "DSCF0561", "title": "", "caption" : ""},
-                         {"id": "6263", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0563", "title": "", "caption" : ""},
-                         {"id": "6264", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0564", "title": "", "caption" : ""},
-                         {"id": "6265", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0565", "title": "", "caption" : ""},
-                         {"id": "6266", "largeWidth": "1200", "largeHeight": "714", "exportFilename": "DSCF0566", "title": "", "caption" : ""},
-                         {"id": "6269", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0569", "title": "", "caption" : ""},
-                         {"id": "6273", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0573", "title": "", "caption" : ""},
-                         {"id": "6284", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0584", "title": "", "caption" : ""},
-                         {"id": "6289", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0589", "title": "", "caption" : ""},
-                         {"id": "6291", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0591", "title": "", "caption" : ""},
-                         {"id": "6292", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0592", "title": "", "caption" : ""},
-                         {"id": "6328", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0628", "title": "", "caption" : ""},
-                         {"id": "6331", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0632", "title": "", "caption" : ""},
+            LR.images = [                                                                                        {"id": "15414", "largeWidth": "1164", "largeHeight": "1200", "exportFilename": "IMG_0698", "title": "", "caption" : ""},
+                         {"id": "15416", "largeWidth": "1186", "largeHeight": "1200", "exportFilename": "IMG_0743", "title": "", "caption" : ""},
+                         {"id": "15418", "largeWidth": "958", "largeHeight": "1200", "exportFilename": "IMG_0808", "title": "", "caption" : ""},
+                         {"id": "15419", "largeWidth": "1200", "largeHeight": "734", "exportFilename": "IMG_0822", "title": "", "caption" : ""},
+                         {"id": "15420", "largeWidth": "1200", "largeHeight": "837", "exportFilename": "IMG_1164", "title": "", "caption" : ""},
+                         {"id": "15421", "largeWidth": "1200", "largeHeight": "900", "exportFilename": "IMG_0996", "title": "", "caption" : ""},
+                         {"id": "15422", "largeWidth": "1200", "largeHeight": "692", "exportFilename": "IMG_1015", "title": "", "caption" : ""},
+                         {"id": "15423", "largeWidth": "1200", "largeHeight": "900", "exportFilename": "IMG_1020", "title": "", "caption" : ""},
+                         {"id": "15424", "largeWidth": "1200", "largeHeight": "608", "exportFilename": "IMG_1024", "title": "", "caption" : ""},
+                         {"id": "15425", "largeWidth": "1200", "largeHeight": "900", "exportFilename": "IMG_1064", "title": "", "caption" : ""},
                                     ]        </script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.10.2.min.js"><\/script>')</script>
