--- a/photodirectory.html
+++ b/photodirectory.html
@@ -31,7 +31,7 @@
 <body>
     <h1>Some photos from</h1>
     <h1><a href="sf.html">San Francisco</a></h1>
-    <h1>London</h1>
+    <h1><a href="london.html">London</a></h1>
     <h1>Madrid</h1>
     <h1>Barcelona</h1>
     <h1>Lauterbrunnen</h1>
@@ -44,6 +44,6 @@
  -->
  <!-- test-->
 <p><i>Photos are still being added</i></p>
-<p>Taken on X-T4 - XF16-80mmF4 R OIS WR</p>
+<p>Most photos taken on X-T4 - XF16-80mmF4 R OIS WR</p>
 </body>
 </html>
