--- a/london.html
+++ b/london.html
@@ -6,7 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Lightroom Gallery</title>
+        <title>Rishi Gurjar + London</title>
+        <link rel="icon" type="image/png" href="picsfolder/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
@@ -32,7 +33,7 @@
                         <header class="">
             <div class="background"></div>
             <div class="meta-left">
-                <p id="galleryTitle" class="title"><a href="photodirectory.html">Back</a> | London 2017, iPad Pro 2nd Gen + Film Presetting</p>
+                <p id="galleryTitle" class="title"><a href="photodirectory.html">Back</a> | London 2017, iPad Pro 2nd Gen + Film Color Grading</p>
                                 <p id="galleryAuthor" class="author"></p>
                                 </p>
             </div>
