--- a/photodirectory.html
+++ b/photodirectory.html
@@ -32,6 +32,7 @@
     <h1>Some photos from</h1>
     <h1><a href="sf.html">San Francisco</a></h1>
     <h1><a href="london.html">London</a></h1>
+    <h1><a href="seattle.html">Seattle</a></h1>
     <h1>Madrid</h1>
     <h1>Barcelona</h1>
     <h1>Lauterbrunnen</h1>
