--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
     <link rel="stylesheet" href="footer.php">
     <!-- <link rel="stylesheet" href="style.css"> --> 
 </head>
-
 <body>
     <svg height="350" width="100%" background="black">
       <circle cx="50%" cy="170" r="150" fill="black" alpha="50%"></circle>
       </svg>
-    <h1> RISHI GURJAR </h1> 
-<h2 class="p1">SF BAY AREA, CALIFORNIA</h2>
+    <h1>Rishi Gurjar</h1> 
+<h2 class="p1">Bay Area, California</h2>
 <h2><span id="datetime"></span></h2><script>var dt = new Date();
-  document.getElementById("datetime").innerHTML=dt.toLocaleString();</script>  
-
-  <p> CONTACT INFO:
-    <a href="mailto:rishigurjar2000@gmail.com">RISHIGURJAR2000@GMAIL.COM</a>
-     </p>
-
-<p>
-  I occasionally take <a href="photodirectory.html">photos</a>.</p>
+  document.getElementById("datetime").innerHTML=dt.toLocaleString();</script>
+<p>Doing work around environmental conservation, climate</p>
+     <p>policy, and looking into human-induced environmental disturbance.</p>
+<p>I occasionally take <a href="photodirectory.html">photos</a>.</p>
+<p>Email: <a href="mailto:rishigurjar2000@gmail.com">rishigurjar2000@gmail.com</a></p>
 
   </body>
 
