--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h2><span id="datetime"></span></h2><script>var dt = new Date();
   document.getElementById("datetime").innerHTML=dt.toLocaleString();</script>
 <p>Doing work around environmental conservation, climate</p>
-     <p>policy, and looking into human-induced environmental disturbance.</p>
+     <p>literacy, and looking into human-induced environmental disturbance.</p>
 <p>I occasionally take <a href="photodirectory.html">photos</a>.</p>
 <p>Email: <a href="mailto:rishigurjar2000@gmail.com">rishigurjar2000@gmail.com</a></p>
 
