new york photos

--- a/ny.html
+++ b/ny.html
@@ -6,8 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>San Francisco</title>
+        
+        <title>New York</title>
         <link rel="icon" type="image/png" href="picsfolder/favicon.png">
+
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
@@ -29,11 +31,11 @@
       }
         </style>
     </head>
-    <body class="has-header row-spacing-none" data-pagination-style="scroll" data-target-row-height="221">
+    <body class="has-header row-spacing-none" data-pagination-style="scroll" data-target-row-height="173">
                         <header class="">
             <div class="background"></div>
             <div class="meta-left">
-                <p id="galleryTitle" class="title"><a href="photodirectory.html">Back</a> | San Francisco 2021, Fujifilm X-T4</p>
+                <p id="galleryTitle" class="title"><a href="photodirectory.html">Back</a> | New York 2022, Fujifilm X-T4</p>
                                 <p id="galleryAuthor" class="author"></p>
                                 </p>
             </div>
@@ -130,26 +132,42 @@
         </div>
         <script type="text/javascript">
             var LR = LR || {};
-            LR.images = [                                                                                        {"id": "6244", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0542", "title": "", "caption" : ""},
-                         {"id": "6251", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0549", "title": "", "caption" : ""},
-                         {"id": "6252", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0551", "title": "", "caption" : ""},
-                         {"id": "6257", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0557", "title": "", "caption" : ""},
-                         {"id": "6258", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0558", "title": "", "caption" : ""},
-                         {"id": "6259", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0559", "title": "", "caption" : ""},
-                         {"id": "6260", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0560", "title": "", "caption" : ""},
-                         {"id": "6261", "largeWidth": "1200", "largeHeight": "737", "exportFilename": "DSCF0561", "title": "", "caption" : ""},
-                         {"id": "6263", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0563", "title": "", "caption" : ""},
-                         {"id": "6264", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0564", "title": "", "caption" : ""},
-                         {"id": "6265", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0565", "title": "", "caption" : ""},
-                         {"id": "6266", "largeWidth": "1200", "largeHeight": "714", "exportFilename": "DSCF0566", "title": "", "caption" : ""},
-                         {"id": "6269", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0569", "title": "", "caption" : ""},
-                         {"id": "6273", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0573", "title": "", "caption" : ""},
-                         {"id": "6284", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0584", "title": "", "caption" : ""},
-                         {"id": "6289", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0589", "title": "", "caption" : ""},
-                         {"id": "6291", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0591", "title": "", "caption" : ""},
-                         {"id": "6292", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0592", "title": "", "caption" : ""},
-                         {"id": "6328", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0628", "title": "", "caption" : ""},
-                         {"id": "6331", "largeWidth": "1200", "largeHeight": "675", "exportFilename": "DSCF0632", "title": "", "caption" : ""},
+            LR.images = [                                                                                        {"id": "25401", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0677", "title": "", "caption" : ""},
+                         {"id": "25372", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0680", "title": "", "caption" : ""},
+                         {"id": "25346", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0682", "title": "", "caption" : ""},
+                         {"id": "25218", "largeWidth": "1200", "largeHeight": "874", "exportFilename": "DSCF0683", "title": "", "caption" : ""},
+                         {"id": "25378", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0685", "title": "", "caption" : ""},
+                         {"id": "25222", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0687", "title": "", "caption" : ""},
+                         {"id": "25300", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0688", "title": "", "caption" : ""},
+                         {"id": "25284", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0691", "title": "", "caption" : ""},
+                         {"id": "25205", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0692", "title": "", "caption" : ""},
+                         {"id": "25389", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0696", "title": "", "caption" : ""},
+                         {"id": "25352", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0697", "title": "", "caption" : ""},
+                         {"id": "25314", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0703", "title": "", "caption" : ""},
+                         {"id": "25398", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0707", "title": "", "caption" : ""},
+                         {"id": "25229", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0713", "title": "", "caption" : ""},
+                         {"id": "25261", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0720", "title": "", "caption" : ""},
+                         {"id": "25221", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0730", "title": "", "caption" : ""},
+                         {"id": "25270", "largeWidth": "1200", "largeHeight": "894", "exportFilename": "DSCF0731", "title": "", "caption" : ""},
+                         {"id": "25231", "largeWidth": "1200", "largeHeight": "801", "exportFilename": "DSCF0747", "title": "", "caption" : ""},
+                         {"id": "25267", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0751", "title": "", "caption" : ""},
+                         {"id": "25303", "largeWidth": "1200", "largeHeight": "848", "exportFilename": "DSCF0756", "title": "", "caption" : ""},
+                         {"id": "25212", "largeWidth": "1200", "largeHeight": "644", "exportFilename": "DSCF0769", "title": "", "caption" : ""},
+                         {"id": "25308", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0773", "title": "", "caption" : ""},
+                         {"id": "25250", "largeWidth": "1200", "largeHeight": "750", "exportFilename": "DSCF0780", "title": "", "caption" : ""},
+                         {"id": "25251", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0782", "title": "", "caption" : ""},
+                         {"id": "25265", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0786", "title": "", "caption" : ""},
+                         {"id": "25357", "largeWidth": "1200", "largeHeight": "709", "exportFilename": "DSCF0790", "title": "", "caption" : ""},
+                         {"id": "25209", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0798", "title": "", "caption" : ""},
+                         {"id": "25245", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0803", "title": "", "caption" : ""},
+                         {"id": "25291", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0811", "title": "", "caption" : ""},
+                         {"id": "25326", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0821", "title": "", "caption" : ""},
+                         {"id": "25292", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0845", "title": "", "caption" : ""},
+                         {"id": "25241", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0846", "title": "", "caption" : ""},
+                         {"id": "25374", "largeWidth": "1200", "largeHeight": "733", "exportFilename": "DSCF0847", "title": "", "caption" : ""},
+                         {"id": "25279", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0853", "title": "", "caption" : ""},
+                         {"id": "25242", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0857", "title": "", "caption" : ""},
+                         {"id": "25349", "largeWidth": "1200", "largeHeight": "800", "exportFilename": "DSCF0858", "title": "", "caption" : ""},
                                     ]        </script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.10.2.min.js"><\/script>')</script>
