--- a/photodirectory.html
+++ b/photodirectory.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/png" href="picsfolder/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Some photos</title>
     <link rel="stylesheet" href="text.css">
@@ -33,6 +34,7 @@
     <h1><a href="sf.html">San Francisco</a></h1>
     <h1><a href="london.html">London</a></h1>
     <h1><a href="seattle.html">Seattle</a></h1>
+    <h1><a href="ny.html">New York</a></h1>
     <h1>Madrid</h1>
     <h1>Barcelona</h1>
     <h1>Lauterbrunnen</h1>
