--- a/london.html
+++ b/london.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Rishi Gurjar + London</title>
+        <title>London</title>
         <link rel="icon" type="image/png" href="picsfolder/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
