--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 <h2 class="p1">Bay Area, California</h2>
 <h2><span id="datetime"></span></h2><script>var dt = new Date();
   document.getElementById("datetime").innerHTML=dt.toLocaleString();</script>
-<p>Doing work around environmental conservation, climate</p>
-     <p>literacy, and looking into human-induced environmental disturbance.</p>
-<p>I occasionally take <a href="photodirectory.html">photos</a>.</p>
-<p>Email: <a href="mailto:rishigurjar2000@gmail.com">rishigurjar2000@gmail.com</a></p>
+<p>Doing work around environmental conservation, climate literacy, and analyzing human-induced environmental disturbance.</p>
+<p><a href="https://scholar.google.com/citations?user=jZ-URcEAAAAJ&hl=en">Google Scholar</p> 
+     <p><a href="https://beyondterra.org/">Beyond Terra</p>
+      <p><a href="https://www.sierraclub.org/san-francisco-bay/climate-literacy#:~:text=The%20goal%20of%20the%20SF,challenges%20of%20a%20destabilizing%20climate.">Sierra Club</p>
 
+<!-- <p>I occasionally take <a href="photodirectory.html">photos</a>.</p> -->
+<p>Email: <a href="mailto:rishigurjar2000@gmail.com">rishigurjar2000@gmail.com</a></p>
   </body>
 
 </html>
