--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="icons.css">
     <link rel="stylesheet" href="text.css">
     <link rel="stylesheet" href="footer.php">
+    <style>
+    </style>
     <!-- <link rel="stylesheet" href="style.css"> --> 
 </head>
 <body>
@@ -21,13 +23,13 @@
 <h2 class="p1">Bay Area, California</h2>
 <h2><span id="datetime"></span></h2><script>var dt = new Date();
   document.getElementById("datetime").innerHTML=dt.toLocaleString();</script>
-<p>Doing work around environmental conservation, climate literacy, and analyzing human-induced environmental disturbance.</p>
-<p><a href="https://scholar.google.com/citations?user=jZ-URcEAAAAJ&hl=en">Google Scholar</p> 
-     <p><a href="https://beyondterra.org/">Beyond Terra</p>
-      <p><a href="https://www.sierraclub.org/san-francisco-bay/climate-literacy#:~:text=The%20goal%20of%20the%20SF,challenges%20of%20a%20destabilizing%20climate.">Sierra Club</p>
-
+<div>
+<p>Working on environmental conservation, climate literacy, and analyzing human-induced environmental disturbance. I occasionally take <a href="shots.html">photos</a>.
+</p>
+        <h2><a href="https://scholar.google.com/citations?user=jZ-URcEAAAAJ&hl=en">Google Scholar</a> / <a href="https://beyondterra.org/">Beyond Terra</a> / <a href="        https://www.sierraclub.org/san-francisco-bay/climate-literacy#:~:text=The%20goal%20of%20the%20SF,challenges%20of%20a%20destabilizing%20climate">Sierra Club</a></h2>
 <!-- <p>I occasionally take <a href="photodirectory.html">photos</a>.</p> -->
 <p>Email: <a href="mailto:rishigurjar2000@gmail.com">rishigurjar2000@gmail.com</a></p>
-  </body>
+</div>
+</body>
 
 </html>
