--- a/shots.html
+++ b/shots.html
@@ -48,6 +48,8 @@
 <br>
 <img src="images/large/DSC_0125.jpg" alt="">
 <p>Barcelona, ESP; 2019</p>
+<img src="images/large/DSC_0502.jpg" alt="">
+<p>Interlaken, CHE; 2019</p>
 </body>
 <br>
 <p>Most photos taken on Fujifilm X-T4</p>
