--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div>
 <p>Working on environmental conservation, climate literacy, and analyzing human-induced environmental disturbance. I occasionally take <a href="shots.html">photos</a>.
 </p>
-        <h2><a href="https://scholar.google.com/citations?user=jZ-URcEAAAAJ&hl=en">Google Scholar</a> / <a href="https://beyondterra.org/">Beyond Terra</a> / <a href="        https://www.sierraclub.org/san-francisco-bay/climate-literacy#:~:text=The%20goal%20of%20the%20SF,challenges%20of%20a%20destabilizing%20climate">Sierra Club</a></h2>
+        <h2><a href="https://www.linkedin.com/in/rishi-gurjar-24a5b01b0/">Linkedin</a> / <a href="https://beyondterra.org/">Beyond Terra</a> / <a href="        https://www.sierraclub.org/san-francisco-bay/climate-literacy#:~:text=The%20goal%20of%20the%20SF,challenges%20of%20a%20destabilizing%20climate">Sierra Club</a></h2>
 <!-- <p>I occasionally take <a href="photodirectory.html">photos</a>.</p> -->
 <p>Email: <a href="mailto:rishigurjar2000@gmail.com">rishigurjar2000@gmail.com</a></p>
 </div>
